package es.etg.daw.prog.mercadaw.model.entities.empleados;

/**
 * La enumeracion TipoEmpleado representa los tipos de empleados de MercaDAW.
 * \author Diego Madroñero Chamorro.
 */
public enum TipoEmpleado {
    EMPLEADO, REPONEDOR, CAJERO, ENCARGADO
}
