package es.etg.daw.prog.mercadaw.model.entities.productos;

/**
 * La enumeracion TipoProducto representa las categoría en las que están clasificadas los productos de MercaDAW.
 * \author Diego Madroñero Chamorro.
 */
public enum TipoProducto {
    ALIMENTACION, DROGUERIA, COSMETICA
}
