@startuml MercaDAW

package model{
    package entities {
        package productos{
            enum TipoProducto{
                ALIMENTACION, DROGUERIA, COSMETICA
            }

            class ProductoFactory{
                + {static} obtenerProducto(tipo: TipoProducto):Producible    
            }

            interface Producible{
                + getPrecioVenta(Producto p): double
            }

            abstract class Producto {
                - id: int
                - nombre: String
                - marca: String
                - precio: double
                - iva: double
                - altura: double
                - anchura: double
                - peso: double
                - numElementos: int
                - stock: int
                - descripcion: String
            }

            class Alimentacion {
                - iva: double
            }

            class Drogueria {
                - iva: double
            }

            class Cosmetica {
                - iva: double
            }

            Producible <|.. Producto
            Producto <|-- Alimentacion
            Producto <|-- Drogueria
            Producto <|-- Cosmetica

        }

        package empleados {
            interface Contratable {
                + {static} SUELDO_EMPLE: double = 1000
                + {static} SUELDO_REPON: double = 1200
                + {static} SUELDO_CAJER: double = 1300
                + {static} SUELDO_ENCAR: double = 1500
                + calcularSalarioNeto();
                + calcularSalarioBruto();
                + calcularAportaciones();
                + calcularIndemnizacion();
            }

            class EmpleadoFactory{
                {static} crear(E):Contratable
            }

            enum TipoEmpleado{
                EMPLEADO, REPONEDOR, CAJERO, ENCARGADO
            }

            class Empleado {
                - id: int
                - nombre: String
                - apellidos: String
                - sueldo: double
                - fechaInicio: Date
            }

            class Reponedor {
                - sueldo: double
            }

            class Cajero {
                - sueldo: double
            }

            class Encargado {
                - sueldo: double
            }

            Contratable <|.. Empleado
            Empleado <|-- Encargado
            Empleado <|-- Reponedor
            Empleado <|-- Cajero
        }

        package clientes {
            class Cliente {
                - id: int
                - nombre: String 
                - correo: String 
                - codPostal: String
            }

            class Compra {
                - id: int
                - fecha: Date
                - cliente: Cliente
                - productos: List<Producto>
            }
        }
    }
}
@enduml